Bug 1240799 - Apply axis height for mfrac elements without bar. r=fredw

--HG--
extra : rebase_source : e1af3219a73e3cf10b04f6b0dde81df0a56b684a