layout/mathml/nsMathMLmfracFrame.cpp
@@ -333,6 +333,11 @@ nsMathMLmfracFrame::PlaceInternal(DrawTarget*          aDrawTarget,
                                     gfxFontEntry::StackGapMin,
                                     oneDevPixel);
       }
+      // Factor in axis height
+      // http://www.mathml-association.org/MathMLinHTML5/S3.html#SS3.SSS2
+      numShift += axisHeight;
+      denShift += axisHeight;
+
       nscoord actualClearance =
         (numShift - bmNum.descent) - (bmDen.ascent - denShift);
       // actualClearance should be >= minClearance
